<resources>
    <string name="app_name">Instagram clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="explore">Explore</string>
    <string name="newPost">New post</string>
    <string name="reels">Reels</string>
    <string name="profile">Profile</string>
</resources>